--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: 67us01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 67us01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.97MB/s(Youtube:不良林), server: sg-cn-hk-relay-3-dd4440.dukou.info, port: 9303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-3-dd4440.dukou.info, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.02MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.05MB/s(Youtube:不良林), server: 198.57.27.184, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇸🇬 新加坡-3.98MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.54MB/s(Youtube:不良林), server: jpsv.project4gyuna.pw, port: 80, type: vmess, uuid: d1d4ad51-ad11-4648-ab28-08bc20db295a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /project4gyuna.pw, ws-headers: {Host: jpsv.project4gyuna.pw}}
-  - {name: 🇺🇸 美国-530.0KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.86MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: v1.ssrsub.com, port: 8443, type: vmess, uuid: 640e3ef0-9c44-49a8-98f6-0895b11eecd6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇺🇸 美国-3.42MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: 7cb64c49-2ce5-4fa6-9b79-9c02eb54735c, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 198.57.27.184, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇦 加拿大-3.03MB/s(Youtube:不良林), server: 198.57.27.184, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: zh01lv5sgp05.feiguayun.xyz, port: 34087, type: ss, cipher: aes-256-gcm, password: 811af1aa-1a09-4495-ae0f-157aea8c0e29}
+  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 198.57.27.184, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 198.57.27.184, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇨🇳 中国-421.7KB/s(Youtube:不良林), server: zh01lv5ge05.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: zh01lv5ca05.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: zh01lv5ca02.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇨🇳 中国-918.1KB/s(Youtube:不良林), server: zh01lv5us01.feiguayun.xyz, port: 33087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.97MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-530.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.86MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.42MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
+      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
