--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-3.02MB/s(Youtube:不良林), server: 198.57.27.184, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-3.03MB/s(Youtube:不良林), server: 198.57.27.184, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇨🇳 中国-2.45MB/s(Youtube:不良林), server: zh01lv5sgp05.feiguayun.xyz, port: 34087, type: ss, cipher: aes-256-gcm, password: 811af1aa-1a09-4495-ae0f-157aea8c0e29}
-  - {name: 🇨🇦 加拿大-2.99MB/s(Youtube:不良林), server: 198.57.27.184, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 198.57.27.184, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-421.7KB/s(Youtube:不良林), server: zh01lv5ge05.feiguayun.xyz, port: 36087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
-  - {name: 🇨🇳 中国-2.48MB/s(Youtube:不良林), server: zh01lv5tw03.feiguayun.xyz, port: 31187, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
-  - {name: 🇨🇳 中国-1.65MB/s(Youtube:不良林), server: zh01lv5ca05.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
-  - {name: 🇨🇳 中国-2.55MB/s(Youtube:不良林), server: zh01lv5ca02.feiguayun.xyz, port: 37087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
-  - {name: 🇨🇳 中国-918.1KB/s(Youtube:不良林), server: zh01lv5us01.feiguayun.xyz, port: 33087, type: ss, cipher: aes-256-gcm, password: 763d291b-90ac-49a2-90c5-12bd393d4f45}
+  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-3.98MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-3.26MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.96MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-179.5KB/s(Youtube:不良林), server: zh01lv5sgp05.feiguayun.xyz, port: 34087, type: ss, cipher: aes-256-gcm, password: 811af1aa-1a09-4495-ae0f-157aea8c0e29}
+  - {name: 🇨🇳 中国-17.88MB/s(Youtube:不良林), server: shanghai-router2-hk5-5478.dukou.info, port: 8305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router2-hk5-5478.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: us-cn-hk-relay-2-3cc426.dukou.info, port: 7302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-2-3cc426.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.73MB/s(Youtube:不良林), server: shanghai-router1-892412-jp5.dukou.info, port: 6305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp5.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.39MB/s(Youtube:不良林), server: sg-cn-hk-relay-3-dd4440.dukou.info, port: 9303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-3-dd4440.dukou.info, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.45MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-3.02MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.45MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.99MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-421.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.48MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.55MB/s(Youtube:不良林)
-      - 🇨🇳 中国-918.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
