--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 167.88.61.2, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-3.98MB/s(Youtube:不良林), server: 67tw01.fans8.xyz, port: 443, type: trojan, password: 86032c4e-ec6e-4523-8c1f-8e7e4ebd0d60, sni: 67tw01.fans8.xyz, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-3.26MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-10.96MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-179.5KB/s(Youtube:不良林), server: zh01lv5sgp05.feiguayun.xyz, port: 34087, type: ss, cipher: aes-256-gcm, password: 811af1aa-1a09-4495-ae0f-157aea8c0e29}
-  - {name: 🇨🇳 中国-17.88MB/s(Youtube:不良林), server: shanghai-router2-hk5-5478.dukou.info, port: 8305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router2-hk5-5478.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.92MB/s(Youtube:不良林), server: us-cn-hk-relay-2-3cc426.dukou.info, port: 7302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: us-cn-hk-relay-2-3cc426.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.73MB/s(Youtube:不良林), server: shanghai-router1-892412-jp5.dukou.info, port: 6305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp5.dukou.info, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.39MB/s(Youtube:不良林), server: sg-cn-hk-relay-3-dd4440.dukou.info, port: 9303, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-3-dd4440.dukou.info, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-3.45MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-1.91MB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇺🇸 美国-7.98MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.74MB/s(Youtube:不良林), server: 51.161.118.38, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-9.11MB/s(Youtube:不良林), server: sg-cn-hk-relay-2-54bc52.dukou.info, port: 9302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: sg-cn-hk-relay-2-54bc52.dukou.info, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.42MB/s(Youtube:不良林), server: shanghai-router1-892412-jp2.dukou.info, port: 6302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp2.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: ru02-cu-2240.dukou.info, port: 2302, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: ru02-cu-2240.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.30MB/s(Youtube:不良林), server: shanghai-router2-hk5-5478.dukou.info, port: 8305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router2-hk5-5478.dukou.info, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.35MB/s(Youtube:不良林), server: shanghai-router1-892412-jp5.dukou.info, port: 6305, type: trojan, password: 18ef1ba6-7c50-36c3-8210-63d328139e17, sni: shanghai-router1-892412-jp5.dukou.info, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-3.40MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.98MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-179.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-17.88MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.39MB/s(Youtube:不良林)
-      - 🇩🇪 德国-3.45MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-7.98MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.74MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.11MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.42MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.30MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.35MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
